# krunner-ai

./: CMakeLists.txt  README.md
src/: groqclient.cpp  groqclient.h  groqrunner.cpp  groqrunner.h  krunner_groq.json
